Fixing nav menu on mobile devices

--- a/frontend/src/app/components/navigation/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navigation/navbar/navbar.component.scss
@@ -28,3 +28,9 @@
   padding-left: 5px;
   fill: var(--main-color);
 }
+
+@media screen and (max-width: 1000px) {
+  .logo {
+    display: none !important;
+  }
+}
